<resources>
    <string name="app_name">assignment2</string>
    <string name="features_selected_to_implement">Features Selected to Implement:\n-</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="player_1">Player 1</string>
    <string name="date_game_created">date game created</string>
    <string name="player_2">Player 2</string>
    <string name="number_of_cards">Number of Cards</string>
    <string name="sum_of_cards">Sum of Cards</string>
    <string name="number_of_wager_cards">Number of Wager Cards</string>
    <string name="scores">Scores</string>
    <string name="player_one_score">player one score</string>
    <string name="player_two_score">TextView</string>
    <string name="winner">Winner</string>
    <string name="player_one_win">Winner is Player One</string>
    <string name="tie_game">Tie</string>
    <string name="player_two_win">Winner is Player Two</string>
    <string name="optional_features">Optional Features:\n1. Edit and Delete Game\n2. Complex List View\n3. Confirm on Cancel Edit\n4. Save Data\n5. Empty State</string>
    <string name="tips">Tap the + button to add game</string>
    <string name="arrow">arrow</string>
    <string name="no_game_created">No game created yet</string>
    <string name="add_game">add game</string>
    <string name="delete_game">Delete Game</string>
    <string name="empty">-</string>
    <string name="are_you_sure_you_want_to_discard_all_changes">Are you sure you want to discard all changes?</string>
</resources>